# gif_png_bmp_onLCD_SPI

./: CMakeLists.txt  README.md  lcd_test.c  png2lcd.c
gif2/: gifdec.cpp  gifdec.h  main.cpp
